--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         </div>
       </div>
 
-      <marquee behavior="" direction="">
+      <marquee behavior="alternate" direction="left">
         <img src="project/logo bolt/Benefit_e8dedd8edc.svg" alt="" />
         <img
           src="project/logo bolt/lucky_brand_logo_spinner_36431a7b34.svg"
